# quake3-native-vm

./: Cargo.toml  clippy.toml  rust-toolchain.toml  shell.nix
.github/workflows/: lint.yml  pages.yml  test.yml
docs/: module-call-quake3.mermaid  quake3-call-module.mermaid  quake3-init-module.mermaid
examples/: hello.rs  proxy.rs
nix/: rust.nix  sources.json
src/: lib.rs  qagame.rs
