[package]
name = "quake3-native-vm"
version = "0.1.0"
authors = ["robo9k <robo@9k.lv>"]
edition = "2018"

[[example]]
name = "hello"
crate-type = ["cdylib"]

[[example]]
name = "proxy"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.70"
once_cell = "1.4.0"

[dev-dependencies]
libloading = "0.6.2"