[package]
name = "quake3-native-vm"
version = "0.1.0"
authors = ["robo9k <robo@9k.lv>"]
edition = "2021"
rust-version = "1.70.0"

[[example]]
name = "hello"
crate-type = ["cdylib"]

[[example]]
name = "proxy"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.146"
once_cell = "1.18.0"

[dev-dependencies]
libloading = "0.8.0"
rental = "0.5.6"
